Fix layout issues with main nav bar caused by avatar icon

--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -156,6 +156,13 @@ textarea.large {
     }
 }
 
+.dropdown-toggle .avatar-tiny {
+    float: none;
+    display: inline-block;
+    margin-top: 0;
+    margin-bottom: -2px;
+}
+
 .srm {
 	display: inline-block;
 	width: 16px;
